--- a/app/index.html
+++ b/app/index.html
@@ -23,11 +23,60 @@
   </head>
   <body>
     <div id="wrapper">
-      <h1>Aquarium Prototype</h1>
-      <div id="fonts">
-        <h1>h1 
+      <h1 id="title">Aquarium Style Guide</h1>
+      <div id="chelsea-font">
+        <h1>h1 Chelsea Market</h1>
+        <h2>h2 Chelsea Market</h2>
+        <h3>h3 Chelsea Market</h3>
+        <h4>h4 Chelsea Market</h4>
+        <h5>h5 Chelsea Market</h5>
+        <h6>h6 Chelsea Market</h6>
+      </div>
+      <div id="news-font">
+        <h1>h1 News Cycle</h1>
+        <h2>h2 News Cycle</h2>
+        <h3>h3 News Cycle</h3>
+        <h4>h4 News Cycle</h4>
+        <h5>h5 News Cycle</h5>
+        <h6>h6 News Cycle</h6>
       </div>
     </div>
+
+    <div id="second-wrapper">
+      <div id="lists">
+        <ul>
+          <li><p>List Item 1</p></li>
+          <li><p>List Item 2</p></li>
+          <li><p>List Item 3</p></li>
+          <li><p>List Item 4</p></li>
+        </ul>
+      </div>
+      <div id="ol-list">
+        <ol>
+          <li><p>List Item</p></li>
+          <li><p>List Item</p></li>
+          <li><p>List Item</p></li>
+          <li><p>List Item</p></li>
+        </ol>
+      </div>
+    </div>
+
+    <div id="container">
+      <div id="links">
+        <a href="#">Link Tag</a>
+        <p>Paragraph Tag</p>
+      </div>
+    </div>
+
+    <div id="third-wrapper">
+      <div id="color1">#063260</div>
+      <div id="color2">#13587F</div>
+      <div id="color3">#1F80B7</div>
+      <div id="color4">#2B9AB9</div>
+      <div id="color5">#89C6EC</div>
+      <div id="color6">#C5E287</div>
+    </div>
+
 
     <!-- build:js scripts/vendor.js -->
     <!-- bower:js -->
